--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elements</title>
-    <link rel="stylesheet" href="../dist/chota.css" />
+    <link rel="stylesheet" href="./chota.css" />
     <style>
       body.dark {
         --bg-color: #000;
